--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@chainlink/contracts": "^0.5.1",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-etherscan": "^3.1.3",
-    "hardhat": "^2.12.4"
+    "ethers": "^5.7.2",
+    "hardhat": "^2.12.4",
+    "hardhat-deploy": "^0.11.22",
+    "hardhat-gas-reporter": "^1.0.9",
+    "solidity-coverage": "^0.8.2"
   },
   "dependencies": {
     "dotenv": "^16.0.3"
